Overflow fix and post text area autofocus

--- a/web/css/global.css
+++ b/web/css/global.css
@@ -203,7 +203,7 @@ textarea:focus {
 #posts {
     min-height: 410px;
     max-height: 410px;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 .no-posts {
